        to Michele Vetturi).
- TD-45 Fix preprocessor define (thanks to Jochen Sprickerhof).
- TD-55 TLSServer/Client need to include <errno.h> on Solaris (thanks to Tatjana
        Heuser). Also applied to NetBSD.
- TD-56 File.cpp needs to include <string.h> on Solaris (thanks to Tatjana
        Heuѕer).
- TD-57 taskdctl script assumes /bin/sh is /bin/bash (thanks to Tatjana Heuser).
- #1255 l10n translation utility improvements (thanks to Renato Alves).
- #1473 Make TASK_RCDIR customizable (thanks to Elias Probst).
- #1486 Truncated sentence in task-sync(5) manpage (thanks to Jakub Wilk).
- #1487 `tasksh` segmentation fault (thanks to Hector Arciga).
- #1492 task show to display default values when appropriate (thanks to Renato
        Alves).
- #1501 info report streamlining - partially implemented.
- #1503 build failure with musl libc due to undefined GLOB_BRACE and GLOB_TILDE
        (thanks to Natanael Copa).
- #1508 Show command highlight configuration (thanks to Nicolas Appriou).
- #1511 sync init crashes if client certification file is empty or invalid
        (thanks to Marton Suranyi).
- TW-5 color.due.today does not work (thanks to Max Muller).
- TW-15 'task recurring' shows only children of recurring tasks (thanks to
        Louis-Claude Canon).
- TW-21 do not match a UDA if not followed by colon (thanks to Scott Kostyshak).
- TW-28 Inserts spaces before punctuation characters (thanks to Matt Kraai).
- TW-43 Better error handling than: "Found extra operands." (thanks to Benjamin
        Weber).
- TW-44 Space handling in dateformat (thanks to Louis-Claude Canon).
- TW-72 extend info report with urgency column.
- TW-99 info report streamlining.
- TW-101 New description column format: Truncated WITH annotation count (thanks
         to atomicules).
- TW-115 allow "0day" durations for UDAs.
- TW-128 new helper command; _envs.
- TW-168 modification of due date relative to current due date (thanks to Dirk
         Sarpe).